# Intuitive_Music

./: .env.example  .gitignore  AI_INTEGRATION.md  CONTRIBUTING.md  DOCUMENTATION.md  FULL_RESOURCE_IMPLEMENTATION_PLAN Kopie.md  FULL_RESOURCE_IMPLEMENTATION_PLAN.md  INTUITIVES_MASTER_ARCHITECTURE.md  LICENSE  PHILOSOPHY.md  PLUGINS.md  PROJECT_SUMMARY.md  README.md  apis.md  config.yaml  features.md  goals_philosophy.md  instructions.md  issues.md  key_paths_urls.md  knowledge.md  requirements.txt  setup.py  tech_stack.csv  theme.md  to_do.md  variables.md
app/native/engine/: CMakeLists.txt  UniversalHost.cpp  UniversalHost.h  daw.cpp  daw.h
app/native/engine/integrations/: AI_Integrations.h  Dataset_Integrations.h  Mobile_Integrations.h  Plugin_Integrations.h  Web_Integrations.h
native/: .gitignore  CMakeLists.txt  README.md
native/.cache/clangd/index/: core.h.A374C6D1D86AA379.idx  effects.c.FD230C24060DF121.idx  effects.h.FC06802BAB120D28.idx  engine.c.0A787711C1B8A5A9.idx  engine.h.CA0237070D6C78CD.idx  generators.c.17A137EAC6029C70.idx  generators.h.6101A2989C60B5D9.idx  input.c.B308644E64D87D0B.idx  input.h.0E134D5AEE4EA14A.idx  intuitives.h.D5FB8B468CA32D2E.idx  main.c.37D4123BBA954572.idx  miniaudio.h.F89DE88027DF5EA7.idx  oscillators.c.CF60161FD12376DA.idx  oscillators.h.D225B713874BAB67.idx  standalone.c.0356F12C5FF1A35A.idx  visual.c.7D97FF1339FA5506.idx  visual.h.C383C88D67447E16.idx
native/app/: standalone.c
native/demo/: main.c
native/include/: intuitives.h
native/include/intuitives/: analyzer.h  core.h  effects.h  engine.h  generators.h  input.h  oscillators.h  processor.h  visual.h
native/intuitives_daw/: CMakeLists.txt  Makefile  README.md  build.sh  demo.py  intuitives.py  intuitives_engine  meta.json  patch_macos.py  pyi_rth_intuitives.py  pyinstaller-mac-onedir.spec  pyinstaller-windows-onedir.spec  pyinstaller-windows-onefile.spec  requirements.txt  setup.py
native/intuitives_daw/Intuitives.app/Contents/: Info.plist
native/intuitives_daw/appimage/: Dockerfile-appimage-builder  appimage-helper.sh
native/intuitives_daw/appimage/python-appimage/: release.py
native/intuitives_daw/design/saadishahh@fiverr/: README.md
native/intuitives_daw/docs/: CONTRIB.md  IMPLEMENTATION_ROADMAP.md  TOOLS.md  benchmarking.md  debugging.md  developing-plugins.md  project_design_principles.md  theming.md
native/intuitives_daw/docs/QA/: README.md
native/intuitives_daw/docs/troubleshooting/: appimage.md  arch_linux.md  linux_install.md  macos_install.md  windows_install.md
native/intuitives_daw/engine/: intuitives-engine
native/intuitives_daw/include/: intuitives_daw.h
native/intuitives_daw/include/gui/: intuitives_gui.h
native/intuitives_daw/int_vendor/: __init__.py
native/intuitives_daw/int_vendor/pymarshal/: __init__.py
native/intuitives_daw/int_vendor/wavefile/: libsndfile.py
native/intuitives_daw/intlib/: __init__.py  ai_models.py  analyzer.py  brand.py  constants.py  integrations.py  log.py  math.py  mutation.py  scale_lock.py  shortcuts.py  util.py
native/intuitives_daw/intlib/hardware/: rpi.py
native/intuitives_daw/intlib/ipc/: __init__.py  abstract.py  daw.py  intuitives.py  wave_edit.py
native/intuitives_daw/intlib/models/: intuitives.py  multifx_settings.py  plugin_file.py  theme.py  track_plugin.py
native/intuitives_daw/intui/: __init__.py  _main.py  enhanced_welcome.py  main.py  neobrutalist_icons.py  preflight.py  project.py  project_recovery.py  qtcore.py  sgqt.py  shared.py  splash.py  transport.py  updates.py  util.py  welcome.py  widgets.py
native/intuitives_daw/intui/daw/: __init__.py  entrypoint.py  filedragdrop.py  hardware.py  painter_path.py  shared.py  strings.py  transport.py
native/intuitives_daw/intui/ipc/: null.py  socket.py
native/intuitives_daw/intui/plugins/: __init__.py  channel.py  compressor.py  delay.py  eq.py  fm1.py  limiter.py  multifx.py  nabu.py  pitchglitch.py  reverb.py  sampler1.py  sidechain_comp.py  simple_fader.py  trigger_fx.py  util.py  va1.py  vocoder.py  widemixer.py  xfade.py
native/intuitives_daw/intui/wave_edit/: __init__.py
native/intuitives_daw/intui/widgets/: __init__.py  _shared.py  abstract_plugin_ui.py  add_mul_dialog.py  additive_osc.py  adsr.py  adsr_main.py  animation.py  audio_item_viewer.py  control.py  distortion.py  eq.py  file_browser.py  file_select.py  filter.py  freq_splitter.py  generators.py  happy_accidents.py  hardware_dialog.py  knob.py  lfo.py  lfo_dialog.py  main.py  multifx.py  multifx10.py  multifx_tooltips.py  nested_combobox.py  note_selector.py  ordered_table.py  paif.py  peak_meter.py  perc_env.py  playback_widget.py  preset_browser.py  preset_manager.py  project_notes.py  pysound.py  ramp_env.py  routing_matrix.py  sample_graph.py  (+6 more)
native/intuitives_daw/launcher/: launch_gui.sh
native/intuitives_daw/linux/: ARM.md  README.md  rpi4.md
native/intuitives_daw/macos/: Distribution.xml  README.md  homebrew_deps.sh  link.py  release.py  test-without-brew.sh
native/intuitives_daw/macos/Scripts/: preinstall
native/intuitives_daw/scripts/: DEBIAN_COPY.sh  bl-osc.py  deb.py  diag.py  fedora-live-os-creator  formant_maker.py  pkgbuild.py  rpm.py
native/intuitives_daw/scripts/wavetable_maker/: main.c
native/intuitives_daw/sglib/: ai_models.py  brand.py  integrations.py  log.py
native/intuitives_daw/sglib/ipc/: __init__.py  abstract.py  daw.py  stargate.py  wave_edit.py
native/intuitives_daw/sglib/models/: intuitives.py  theme.py  track_plugin.py
native/intuitives_daw/sgui/: _main.py  enhanced_welcome.py  main.py  preflight.py  project.py  project_recovery.py  shared.py  transport.py  updates.py  util.py  welcome.py
native/intuitives_daw/src/: main.cpp
native/intuitives_daw/windows/: LaunchIntuitives.cmd  README.md  debug-symbols.md  release.py  windows_portable_flash_drive.md
native/src/core/: engine.c
native/src/dsp/: effects.c  oscillators.c
native/src/generators/: generators.c
native/src/input/: input.c
native/src/visual/: visual.c
native/src/wasm/: bindings.c
native/wasm/: intuitives.js  react-hooks.js
(+210 files in other folders)
